--- a/pages/addPost.pug
+++ b/pages/addPost.pug
@@ -4,6 +4,6 @@ block content
         h2 Add new post
         form#add-post
             input(type="text", name="titel" placeholder='titel' required)
-            input(type="text", name="description" placeholder='description' required)
+            textarea(type="text", name="description" placeholder='description' required)
             input(type="file", name="file"  required)
             input(type="submit",class="btn btnAddPost", value="send")
