--- a/pages/head.pug
+++ b/pages/head.pug
@@ -3,6 +3,8 @@ html
         link(rel="stylesheet" href="/public/reset.css")
         link(rel="stylesheet" href="/public/style.css")
         script(type="module", src="/public/script.js")
+        title Microblog-Service 
+
     body
         include header
         block content
