--- a/pages/post.pug
+++ b/pages/post.pug
@@ -16,6 +16,6 @@ block content
             else
                 p No comments...
             form#add-comment(method="post" action="/comments/add-comment")
-                input(type="text", name="comment" placeholder='Add comment')
+                textarea(type="text", name="comment" placeholder='Add comment')
                 input(type="hidden" name="post_id" value=`${post.id}`)
                 input(type="submit",class="btn", value="send")
