--- a/pages/register.pug
+++ b/pages/register.pug
@@ -2,7 +2,7 @@ extends head
 block content
     div.container.box-registration
         form#register(method="post" action="/auth/register")
-            input(type="text" placeholder="name" name="username" required)
+            input(type="text" placeholder="name" name="username" )
             input(type="email" placeholder="email" name="email" required)
             input(type="password" placeholder="password" name="password" required)
             input(class="btn" type="submit"  value="registration")
