--- a/static/style.css
+++ b/static/style.css
@@ -138,7 +138,8 @@ html {
 }
 
 .box_img-post {
-  width: 70rem;
+  max-width: 70rem;
+  width: 100%;
   height: 50rem;
   position: relative;
   left: 50%;
@@ -228,7 +229,7 @@ html {
   display: block;
 }
 
-#add-comment input:nth-child(1) {
+#add-comment textarea:nth-child(1) {
   text-align: top;
   width: 100%;
   height: 10rem;
@@ -238,7 +239,7 @@ html {
   position: relative;
 }
 
-#add-comment input:nth-child(1)::placeholder {
+#add-comment textarea:nth-child(1)::placeholder {
   position: absolute;
   left: 1.5rem;
   top: 1.5rem;
@@ -362,7 +363,7 @@ html {
   margin-bottom: 3rem;
 }
 
-#add-post input {
+#add-post input,textarea {
   width: 100%;
   padding: 1.5rem;
   border-radius: 1.6rem;
@@ -370,11 +371,11 @@ html {
   position: relative;
 }
 
-#add-post input:nth-child(2) {
+#add-post textarea {
   min-height: 20rem;
 }
 
-#add-post input:nth-child(2)::placeholder {
+#add-post textarea::placeholder {
   position: absolute;
   left: 1.5rem;
   top: 1.5rem;
