fixed layout to hide some buttons for user

--- a/pages/_layout.pug
+++ b/pages/_layout.pug
@@ -1,10 +1,10 @@
-html 
-    head 
+html
+    head
         link(rel="stylesheet" href="/public/reset.css")
         link(rel="stylesheet" href="/public/style.css")
         script(type="module", src="/public/script.js")
-        title Microblog-Service 
+        title Microblog-Service
 
     body
-        include header
+        block header
         block content
