--- a/pages/main.pug
+++ b/pages/main.pug
@@ -1,5 +1,7 @@
-extends head 
-block content       
+extends _layout
+block header
+    include header
+block content
     section.main.container
         div.box-post
             each item in posts
