style for register error

--- a/static/style.css
+++ b/static/style.css
@@ -296,6 +296,12 @@ html {
   text-align: center;
 }
 
+#register .error {
+  font-weight: bolder;
+  color: #b70303;
+  font-size: larger;
+}
+
 /* ---------------------------------LogIn--------------------------------- */
 .box-login {
   display: flex;
