corrected the teacher comments

--- a/pages/my_posts.pug
+++ b/pages/my_posts.pug
@@ -1,4 +1,6 @@
-extends head 
+extends _layout
+block header
+    include header
 block content
     div.container
         h2.titel-myPosts My posts
@@ -9,5 +11,5 @@ block content
                         h3= item.titel
                         h4= item.user_id.username
                         button.read read
-                        form(action=`/posts/${item._id}/delete` method="post" id="deleteForm")
+                        form(action=`/api/posts/${item._id}/delete` method="post" id="deleteForm")
                             button(class="delete" type="submit") delete
