--- a/pages/addPost.pug
+++ b/pages/addPost.pug
@@ -1,9 +1,9 @@
-extends head 
+extends _layout 
 block content
     div.container.box-add-post
         h2 Add new post
         form#add-post
             input(type="text", name="titel" placeholder='titel' required)
             textarea(type="text", name="description" placeholder='description' required)
-            input(type="file", name="file"  required)
-            input(type="submit",class="btn btnAddPost", value="send")
+            input(type="file", name="file")
+            input(type="submit", class="btn btnAddPost", value="send")
