--- a/pages/main.pug
+++ b/pages/main.pug
@@ -1,4 +1,6 @@
-extends head 
+extends _layout
+block header
+    include header
 block content       
     section.main.container
         div.box-post
