--- a/pages/addPost.pug
+++ b/pages/addPost.pug
@@ -6,4 +6,5 @@ block content
             input(type="text", name="titel" placeholder='titel' required)
             textarea(type="text", name="description" placeholder='description' required)
             input(type="file", name="file")
+            .error= error
             input(type="submit", class="btn btnAddPost", value="send")
