--- a/pages/admin.pug
+++ b/pages/admin.pug
@@ -16,6 +16,6 @@ block content
                         div.email= item.email
                         div.name= item.username
                         div.box-btn
-                            form(action=`/users/delete` method="post")
+                            form(action=`/api/users/delete` method="post")
                                 input(type="hidden" name="user_id" value=`${item._id}`)
                                 button(class="delete" type="submit") delete
