--- a/pages/post.pug
+++ b/pages/post.pug
@@ -18,9 +18,14 @@ block content
                     div.comment
                         p= item.comment
                         h4= item.user_id.username
+                        if user.id === item.user_id.id
+                            form#delete-comment(method="post" action="/api/comments/delete-comment")
+                                input(type="hidden" name="comment" value=`${item.id}`)
+                                input(type="hidden" name="post_id" value=`${post.id}`)
+                                input(type="submit",class="btn-delete", value="delete")
             else
                 p No comments...
             form#add-comment(method="post" action="/api/comments/add-comment")
-                textarea(type="text", name="comment" placeholder='Add comment')
+                textarea(type="text", name="comment" placeholder='Add comment' required)
                 input(type="hidden" name="post_id" value=`${post.id}`)
                 input(type="submit",class="btn", value="send")
