--- a/pages/register.pug
+++ b/pages/register.pug
@@ -5,5 +5,5 @@ block content
             input(type="text" placeholder="name" name="username" )
             input(type="email" placeholder="email" name="email" required)
             input(type="password" placeholder="password" name="password" required)
-            .error= locals.error
+            .error= error
             input(class="btn" type="submit"  value="registration")
