--- a/pages/editPost.pug
+++ b/pages/editPost.pug
@@ -7,4 +7,5 @@ block content
             input(type="hidden", name="post_id" value=`${post._id}`)
             textarea(type="text", name="description" placeholder='description' required)= post.description
             input(type="file", name="file")
+            .error= error
             input(type="submit",class="btn btnEditPost", value="send")
